# ckanext-datarequests

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
ckanext/: __init__.py
ckanext/datarequests/: __init__.py  actions.py  auth.py  constants.py  db.py  helpers.py  plugin.py  validator.py
ckanext/datarequests/assets/: webassets.yml
ckanext/datarequests/controllers/: ui_controller.py
ckanext/datarequests/templates/: header.html
ckanext/datarequests/templates/datarequests/: base.html  close.html  edit.html  index.html  new.html  show.html
ckanext/datarequests/templates/datarequests/snippets/: additional_info.html  comment_form.html  comment_item.html  datarequest_form.html  datarequest_item.html  datarequest_list.html  followers.html
ckanext/datarequests/templates/organization/: datarequests.html  read_base.html
ckanext/datarequests/templates/user/: datarequests.html  read_base.html
ckanext/datarequests/tests/: test_actions.py  test_actions_data.py  test_auth.py  test_db.py  test_helpers.py  test_plugin.py  test_selenium.py  test_ui_controller.py  test_validator.py
