[metadata]
description-file = README.md

[tool.black]
# same as ckan
line-length = 79

[flake8]
max-line-length = 79
extend-ignore = E203,W503,E266

[isort]
line_length = 79
indent = '    '
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_tests = tests
known_first_party = datarequests
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,TESTS

[nosetests]
ckan=1
with-pylons=test.ini
with-xunit=1
with-coverage=1
cover-package=ckanext.datarequests
cover-inclusive=1
cover-erase=1
cover-xml=1

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/datarequests/i18n/ckanext-datarequests.pot
width = 80

[init_catalog]
domain = ckanext-datarequests
input_file = ckanext/datarequests/i18n/ckanext-datarequests.pot
output_dir = ckanext/datarequests/i18n

[update_catalog]
domain = ckanext-datarequests
input_file = ckanext/datarequests/i18n/ckanext-datarequests.pot
output_dir = ckanext/datarequests/i18n

[compile_catalog]
domain = ckanext-datarequests
directory = ckanext/datarequests/i18n
statistics = true
